--- a/src/app/layouts/app-header/app-header.component.html
+++ b/src/app/layouts/app-header/app-header.component.html
@@ -29,10 +29,10 @@
                         <div class="item-details" *ngIf="Header.company !== 0">{{Header.company}} en attente</div>
                         <div class="item-details" *ngIf="Header.company === 0">0 en attente</div>
                     </a>
-                    <a class="mega-toolbar-item" [routerLink]="['/user-lists']">
-                        <div class="item-icon"><i class="ti-user"></i></div>
-                        <div class="item-name">Utilisateurs</div>
-                        <div class="item-text">Gestionnaire back office</div>
+                    <a class="mega-toolbar-item" [routerLink]="['/settings']">
+                        <div class="item-icon"><i class="ti-settings"></i></div>
+                        <div class="item-name">Paramètres</div>
+                        <div class="item-text"></div>
                     </a>
                 </div>
             </div>
