--- a/src/app/dashboard/offers/offer-edit/offer-edit.component.html
+++ b/src/app/dashboard/offers/offer-edit/offer-edit.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-4 mb-4">
           <a class="btn btn-primary btn-sm btn-air mr-2" [routerLink]="['/offer-lists']">Retour</a>
-          <a class="btn btn-secondary btn-sm btn-air mr-2" target="_blank" [href]="Offer.offer_url">Visualiser</a>
+          <a class="btn btn-secondary btn-sm mr-2" target="_blank" [href]="Offer.offer_url">Visualiser</a>
         </div>
       </div>
       <h5 class="font-strong mb-3">
