--- a/src/app/directives/candidat/featured-switcher/featured-switcher.component.html
+++ b/src/app/directives/candidat/featured-switcher/featured-switcher.component.html
@@ -14,13 +14,25 @@
               <i class="la la-info-circle alert-icon"></i>
               <strong>Avertissement</strong><br>Veuillez modifier la position du candidat avant d'enregistrer.
             </div>
-            <div class="col-sm-12">
+            <div class="col-sm-12 mb-4">
               <div class="form-group">
-                <select class="selectpicker form-control" name="position" [(ngModel)]="position" data-style="btn-solid">
-                    <option value="0">Standard</option>
+                <label>Position</label>
+                <select class="form-control" name="position" [value]="position" [(ngModel)]="position" data-style="btn-solid">
+                  <option value="0">Aucun</option>
                   <option value="1">A la une</option>
-                  
                 </select>
+              </div>
+            </div>
+
+            <div class="col-sm-12 mb-4" [ngClass]="{'d-none': position == 0}">
+              <div class="form-group">
+                <label>Date limite</label>
+                <div class="input-group date">
+                  <span class="input-group-addon bg-white"><i class="fa fa-calendar"></i></span>
+                  <input class="form-control" name="datelimit" type="text" [value]="dateLimit" placeholder="Date limite"
+                    autocomplete="off" required>
+
+                </div>
               </div>
             </div>
 
