--- a/src/app/dashboard/offers/offer-lists/offer-lists.component.html
+++ b/src/app/dashboard/offers/offer-lists/offer-lists.component.html
@@ -1,5 +1,7 @@
 <div class="page-content fade-in-up">
   <app-featured-offer (refresh)="reload()"></app-featured-offer>
+  <app-rate-plan (refresh)="reload()"></app-rate-plan>
+  <app-deadline-offer (refresh)="reload()"></app-deadline-offer>
   <div class="ibox">
     <div class="ibox-body">
       <h5 class="font-strong mb-4">LES OFFRES</h5>
