--- a/src/app/directives/offers/postuled-candidates/postuled-candidates.component.html
+++ b/src/app/directives/offers/postuled-candidates/postuled-candidates.component.html
@@ -16,7 +16,7 @@
             <small class="text-muted">{{request.candidate.privateInformations.firstname}}
               {{request.candidate.privateInformations.lastname}}</small>
             <div>
-              <span class="badge badge-default" *ngIf="request.type === 'apply'">Interesser</span>
+              <span class="badge badge-default" *ngIf="request.type === 'apply'">Postuler</span>
               <span class="badge badge-default" *ngIf="request.type === 'interested'">Sélectionner</span>
             </div>
 
