--- a/src/app/dashboard/blogs/new-blog/new-blog.component.html
+++ b/src/app/dashboard/blogs/new-blog/new-blog.component.html
@@ -1,3 +1,47 @@
-<p>
-  new-blog works!
-</p>
+<div class="modal fade" id="new-article-modal" data-keyboard="false" data-backdrop="static">
+  <div class="modal-dialog modal-lg" role="document">
+    <form class="modal-content" #newActicleForm="ngForm" (ngSubmit)="onSubmitForm( newActicleForm )">
+      <div class="modal-header p-4">
+        <h5 class="modal-title">Ajouter une article</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body p-4">
+        <div class="row" *ngIf="message">
+          <div class="col-12">
+              <div class="alert alert-warning">{{message}}</div>
+          </div>
+           
+        </div>
+        <div class="row">
+          <div class="col-sm-12 mb-4">
+            <div class="form-group">
+              <label class="font-bold">Titre</label>
+              <input class="form-control from-control-solid" autocomplete="off" name="title" type="text" [(ngModel)]="Form.title"
+                placeholder="Saisissez votre titre ici" required>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6 form-group mb-4">
+            <label class="font-bold">Contenue</label>
+            <editor apiKey="2grxn9iofnxolcaedqa399sh4ft6c1mg3e1kumgnyq6o0ap1" required [(ngModel)]="Form.content" name="content" [init]="tinyMCESettings"></editor>
+          </div>
+        </div>
+
+      </div>
+      <div class="modal-footer justify-content-between bg-primary-50">
+        <div>
+          <button class="btn btn-primary mr-3" type="submit" [disabled]="loading">
+            <span>Enregistrer</span>
+          </button>
+          <button class="btn btn-secondary mr-3" type="button" (click)="onDraft( newActicleForm )" [disabled]="loading">
+            <span>Enregistrer le brouillon</span>
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
