--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -37,6 +37,12 @@
           </h5><small class="menu-item-text">Voir les offres</small>
         </div>
       </a>
+      <a [routerLink]="['/ads']" routerLinkActive="router-link-active"><i class="la la-bullhorn menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Publicités
+          </h5><small class="menu-item-text">Gérer les publicités</small>
+        </div>
+      </a>
       <a [routerLink]="['/blogs']" routerLinkActive="router-link-active"><i class="la la-thumb-tack menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Blogs
